<resources>
    <string name="app_name">James Weather</string>
    <string name="condition">Condition</string>
    <string name="temperature">Temperature</string>
    <string name="location">Location</string>
    <string name="slide">Daily Weather</string>
    <string name="humidity">humidity</string>
    <string name="visibility"> </string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset"> </string>
    <string name="logo">James Weather App.</string>
</resources>
