<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cambrian.weatherapp.WeatherSlideActivity">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        app:umanoDragView="@+id/dragView"
        app:umanoOverlay="true"
        app:umanoPanelHeight="68dp"
        app:umanoParalaxOffset="100dp"
        app:umanoShadowHeight="4dp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <!-- MAIN CONTENT -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:layout_below="@+id/sliding_layout"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weatherIconImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/temperature"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtCond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTemp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/condition"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCond"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/txtLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="75dp"
                android:text="@string/logo"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/weatherIconImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/na" />

            <TextView
                android:id="@+id/txtHumid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="219dp"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/txtSunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="277dp"
                android:text="@string/sunrise"
                android:textColor="#FFC300"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtSunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="146dp"
                android:text="@string/sunset" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edtxtCity"
                android:layout_alignBottom="@+id/edtxtCity"
                android:layout_toStartOf="@+id/edtxtCity"
                android:text="City " />

            <EditText
                android:id="@+id/edtxtCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Toronto, On"
                android:textColor="?attr/colorButtonNormal"
                android:layout_above="@+id/txtSunset"
                android:layout_marginBottom="16dp"
                android:layout_alignStart="@+id/txtLogo"
                android:layout_toStartOf="@+id/btnGo" />

            <Button
                android:id="@+id/btnGo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edtxtCity"
                android:layout_alignBottom="@+id/edtxtCity"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="19dp"
                android:shadowColor="@android:color/background_light"
                android:text=" G O "
                android:textAlignment="viewStart"
                android:textColor="@android:color/holo_red_light" />

            <!--TextView
                    android:text="@string/visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVisib"
                    android:layout_below="@+id/txtHumid"
                    android:layout_alignStart="@+id/txtLoc"
                    android:layout_marginTop="14dp" /-->
        </RelativeLayout>


        <!-- SLIDING LAYOUT -->
        <LinearLayout
            android:id="@+id/dragView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"
            android:clickable="true"
            android:focusable="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/slide"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/daily" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_bright">
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:id="@+id/dailyList" />

            </LinearLayout>
        </LinearLayout>


    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
</RelativeLayout>

